--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,71 @@
-/target
-/.DS_Store
+debug/
+target/
+**/*.rs.bk
+**/*.rs.orig
+*.pdb
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.swp
+*.swo
+*~
+*.bak
+*.backup
+*.tmp
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+config/development.toml
+config/local.toml
+test_results/
+coverage/
+book/
+docs/_build/
+target/criterion/
+*.prof
+package-lock.json
+yarn.lock
+email_cache/
+*.mbox
+*.eml
+calendar_cache/
+*.ics
+*.tmp.sync
+sync_logs/
+*.db.backup
+database_backups/
+migrations/*.down.sql.backup
+benchmarks/
+perf.data*
+app.log
+*.log.*
+logs/
