--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,16 @@ sqlx = { version = "0.8", features = [
 ] }
 chrono = { version = "0.4", features = ["serde"] }
 chrono-english = "0.1"
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
+once_cell = "1.19"
+anyhow = "1.0"
 clap = { version = "4.5.48", features = ["derive"] }
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 tokio = { version = "1", features = ["full"] }
+
+[dev-dependencies]
+tokio-test = "0.4"
