--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.0"
 once_cell = "1.19"
+lru = "0.16.1"
+strsim = "0.11"
 anyhow = "1.0"
 clap = { version = "4.5.48", features = ["derive"] }
 crossterm = "0.29.0"
