--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,15 @@ clap = { version = "4.5.48", features = ["derive"] }
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 tokio = { version = "1", features = ["full"] }
+futures = "0.3.31"
+async-imap = { version = "0.11", optional = true }
+async-native-tls = { version = "0.5", optional = true }
+icalendar = { version = "0.17.4", optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
+
+[features]
+default = []
+email-sync = ["async-imap", "async-native-tls"]
+calendar-sync = ["icalendar"]
