--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,16 @@ lru = "0.16.1"
 strsim = "0.11"
 anyhow = "1.0"
 clap = { version = "4.5.48", features = ["derive"] }
-crossterm = "0.29.0"
+crossterm = { version = "0.29.0", features = ["event-stream"] }
 ratatui = "0.29.0"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.31"
 async-imap = { version = "0.11", optional = true }
 async-native-tls = { version = "0.5", optional = true }
 icalendar = { version = "0.17.4", optional = true }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+tracing-appender = "0.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
