--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ icalendar = { version = "0.17.4", optional = true }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
+mailparse = "0.16.1"
+keyring = "3.6.3"
 
 [dev-dependencies]
 tokio-test = "0.4"
