--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-
 sqlx = { version = "0.8", features = [
   "runtime-tokio-rustls",
   "sqlite",
@@ -26,19 +25,24 @@ crossterm = { version = "0.29.0", features = ["event-stream"] }
 ratatui = "0.29.0"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.31"
-async-imap = { version = "0.11", optional = true }
-async-native-tls = { version = "0.5", optional = true }
-icalendar = { version = "0.17.4", optional = true }
+mailparse = "0.16.1"
+keyring = "3.6.3"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
-mailparse = "0.16.1"
-keyring = "3.6.3"
+
+async-imap = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio"] }
+tokio-native-tls = { version = "0.3", optional = true }
+native-tls = "0.2"
+
+icalendar = { version = "0.17.4", optional = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
 
 [features]
 default = []
-email-sync = ["async-imap", "async-native-tls"]
+email-sync = ["async-imap", "tokio-native-tls"]
 calendar-sync = ["icalendar"]
+async-imap = ["dep:async-imap"]
+tokio-native-tls = ["dep:tokio-native-tls"]
