--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ sqlx = { version = "0.8", features = [
 ] }
 chrono = { version = "0.4", features = ["serde"] }
 chrono-english = "0.1"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.13.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.9.11+spec-1.1.0"
 regex = "1.0"
 once_cell = "1.19"
 lru = "0.16.1"
@@ -22,7 +23,7 @@ strsim = "0.11"
 anyhow = "1.0"
 clap = { version = "4.5.48", features = ["derive"] }
 crossterm = { version = "0.29.0", features = ["event-stream"] }
-ratatui = "0.29.0"
+ratatui = "0.30.0"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.31"
 tracing = "0.1"
