--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.9.11+spec-1.1.0"
 regex = "1.0"
+nom = "7"
 once_cell = "1.19"
 lru = "0.16.1"
 strsim = "0.11"
